# kde5-cmake

./: .gitignore  CMakeLists.txt  README.md  kde5-cmake.kdevtemplate  kde5-cmake.tar.bz2  repurpose.sh
src/main/: %{APPNAMELC}.h.in  main.cpp  sample.h.in
src/main/resources/: qml.qrc
src/main/resources/qml/: main.qml
